--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "10.1.3",
     "node-sass": "^5.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2"
   }
 }
