--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
-    "next": "10.1.3",
+    "next": "^10.2.2",
     "node-sass": "^5.0.0",
     "notistack": "^1.0.6",
     "react": "17.0.2",
