--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
     "next": "^10.2.2",
     "node-sass": "^5.0.0",
     "notistack": "^1.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
+    "typescript": "^4.3.5",
     "uuid": "^3.4.0",
     "zustand": "^3.4.1"
   }
