--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
+    "react-geocode": "^0.2.3",
     "typescript": "^4.3.5",
     "uuid": "^3.4.0",
     "zustand": "^3.4.1"
