--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "js-cookie": "^2.2.1",
+    "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
     "next": "^11.0.1",
     "node-sass": "^5.0.0",
