--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-geocode": "^0.2.3",
+    "react-sortable-hoc": "^2.0.0",
     "uuid": "^3.4.0",
     "zustand": "^3.4.1"
   },
