--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     admin:
         build:
             context: ./
-        # ports:
-        #     - "3010:3010"
+        ports:
+            - "3010:3010"
         container_name: lets-cook-admin
 
         stdin_open: true
