--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^5.0.0",
     "notistack": "^1.0.6",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.2",
     "react-geocode": "^0.2.3",
