--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/utils": "^4.11.2",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
+    "chart.js": "^3.8.0",
     "date-fns": "^2.22.1",
     "js-cookie": "^2.2.1",
     "js-file-download": "^0.4.12",
@@ -35,6 +36,7 @@
     "zustand": "^3.4.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.2",
     "typescript": "^4.3.5"
   }
 }
