--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zustand": "^3.4.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.2",
     "typescript": "^4.3.5"
   }
