--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dropzone": "^11.3.2",
     "react-geocode": "^0.2.3",
     "react-sortable-hoc": "^2.0.0",
+    "sass": "^1.65.1",
     "uuid": "^3.4.0",
     "zustand": "^4.3.9"
   },
