--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,60 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "strict": false,
-        "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "jsx": "preserve",
-        "baseUrl": ".",
-        "paths": {
-            "@atoms": ["components/atoms"],
-            "@molecules": ["components/molecules"],
-            "@organisms": ["components/organisms"],
-            "@layouts": ["components/layout"],
-            "@lang": ["lang"],
-            "@stores": ["stores"],
-            "@helpers": ["helpers"],
-            "@hooks": ["hooks"]
-        }
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@atoms": [
+        "components/atoms"
+      ],
+      "@molecules": [
+        "components/molecules"
+      ],
+      "@organisms": [
+        "components/organisms"
+      ],
+      "@layouts": [
+        "components/layout"
+      ],
+      "@lang": [
+        "lang"
+      ],
+      "@stores": [
+        "stores"
+      ],
+      "@helpers": [
+        "helpers"
+      ],
+      "@hooks": [
+        "hooks"
+      ]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "stores/auth.ysx"],
-    "exclude": ["node_modules"]
+    "incremental": true
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "stores/auth.ysx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
